fix #44: using List.of instead of Collections